--- a/network/network.html
+++ b/network/network.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <script src="Chart.js"></script>
+  <script src="Chart.js">/* I don't know if it is ok to put it here. Origin: http://www.chartjs.org/ */</script>
   <style>
     .neuron{
       background: #4CBCFF;
