--- a/network/network.html
+++ b/network/network.html
@@ -12,22 +12,24 @@
     }
     .sub_div{
       width: 5%;
-      height: 1em;
+      height: 2em;
       background: green;
     }
     .sub_divHighLighted{
-      width: 100%;
-      height: 1em;
+      display: table;
+      width: 90%;
+      height: 2em;
       background: red;
     }
     .sub_2_div{
       width: 5%;
-      height: 1em;
+      height: 2em;
       background: green;
     }
     .sub_2_divHighLighted{
-      width: 100%;
-      height: 1em;
+      display: table;
+      width: 90%;
+      height: 2em;
       background: grey;
     }
     .networkPanel{
@@ -39,6 +41,11 @@
     }
     #chartDiv{
       width:50%;
+    }
+    .button{
+      background: grey;
+      height: 5%;
+      width: 10%;
     }
   </style>
 </head>
@@ -226,6 +233,39 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     let render = function(){
 
     }
+    render.prototype.createToggleButton = function(executable1, executable2, innerHTML1, innerHTML2){
+      let div = document.createElement("div")
+      let div2 = document.createElement("div")
+
+      div.className = "button"
+      div.innerHTML = innerHTML1
+      div.onclick = () => {
+        executable1()
+        div.style.display = "none"
+        div2.style.display = "block"
+      }
+      document.body.appendChild(div);
+
+      div2.className = "button"
+      div2.innerHTML = innerHTML2
+      div2.onclick = () => {
+        executable2()
+        div.style.display = "block"
+        div2.style.display = "none"
+      }
+      div2.style.display = "none"
+      document.body.appendChild(div2);
+    }
+
+    render.prototype.createButton = function(executable, innerHTML){
+      let div = document.createElement("div")
+      div.className = "button"
+      div.innerHTML = innerHTML
+      div.onclick = () => {
+        executable()}
+      document.body.appendChild(div);
+
+    }
 
     render.prototype.createDiv = function(neuron){
       let div = document.createElement("div")
@@ -239,7 +279,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       div.innerHTML =
       "<div>"+
               "activationValue: " + Math.round(neuron.activationValue*100)/100 + //hard coding
-              "<br>"+ "bias: " + neuron.bias+
+              "<br>"+ "bias: " + Math.round(neuron.bias*1000)/1000+
               "<br>"+ "output: " + Math.round(neuron.getOutputValue()*100)/100 +
               "<br>"+ "timeLable: " + neuron.timeLable+
               "<br>"+ "word: " + neuron.word+
@@ -468,48 +508,59 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     var lossArray_window_Interval = 10
     var index_Interval = 0
 
+    var intervalID
+    var theInterval = function(){
+        intervalID = setInterval(()=>{
+        let randomnumber=Math.floor(Math.random()*7)
 
-    setInterval(()=>{
-      let randomnumber=Math.floor(Math.random()*7)
+        let first = Math.floor (randomnumber/4)
+        let second = Math.floor ( (randomnumber-first*4)/2)
+        let third = Math.floor ( randomnumber-first*4-second*2)
 
-      let first = Math.floor (randomnumber/4)
-      let second = Math.floor ( (randomnumber-first*4)/2)
-      let third = Math.floor ( randomnumber-first*4-second*2)
-
-      network1.doInputs(first,second,third)
-
-
-
-      if(randomnumber<2){
-        network1.doBackward(0,0,1);
-        lossArray_Interval.push(network1.getLosses(0,0,1))}
-      else if(randomnumber<4){
-        network1.doBackward(0,1,0);
-        lossArray_Interval.push(network1.getLosses(0,1,0))}
-      else if(randomnumber<8){
-        network1.doBackward(1,0,0);
-        lossArray_Interval.push(network1.getLosses(1,0,0))}
+        network1.doInputs(first,second,third)
 
 
-      network1.d_weightUpdate()
-      //console.log(network1.getLosses(first,second,third));
 
-      if (index_Interval == lossArray_window_Interval){
-        let sum = 0
-        for(let i=0;i<lossArray_window_Interval;i++){
-          sum += lossArray_Interval[i]
+        if(randomnumber<2){
+          network1.doBackward(0,0,1);
+          lossArray_Interval.push(network1.getLosses(0,0,1))}
+        else if(randomnumber<4){
+          network1.doBackward(0,1,0);
+          lossArray_Interval.push(network1.getLosses(0,1,0))}
+        else if(randomnumber<8){
+          network1.doBackward(1,0,0);
+          lossArray_Interval.push(network1.getLosses(1,0,0))}
+
+
+        network1.d_weightUpdate()
+        //console.log(network1.getLosses(first,second,third));
+
+        if (index_Interval == lossArray_window_Interval){
+          let sum = 0
+          for(let i=0;i<lossArray_window_Interval;i++){
+            sum += lossArray_Interval[i]
+          }
+          sum = sum/lossArray_window_Interval
+          myChart.data.labels.push(sum)
+          myChart.data.datasets[0].data.push(sum)
+          myChart.update()
+          // empty all
+          lossArray_Interval = []
+          index_Interval = 0
         }
-        sum = sum/lossArray_window_Interval
-        myChart.data.labels.push(sum)
-        myChart.data.datasets[0].data.push(sum)
-        myChart.update()
-        // empty all
-        lossArray_Interval = []
-        index_Interval = 0
-      }
-      index_Interval++;
-    }, 1)
+        index_Interval++;
+      }, 1)
+    }
 
+    theInterval()
+
+
+    network1.renderGuy.createToggleButton(
+      ()=>{clearInterval(intervalID)},
+      ()=>{theInterval()},
+      "stop",
+      "start"
+    )
 
 
 
